--- a/SonarQube.Client.Tests/packages.config
+++ b/SonarQube.Client.Tests/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="Castle.Core" version="4.3.1" targetFramework="net46" />
   <package id="FluentAssertions" version="5.6.0" targetFramework="net46" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net46" />
   <package id="Moq" version="4.10.1" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net46" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net46" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.1" targetFramework="net46" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net46" />
