--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -338,9 +338,9 @@
     </AdditionalFiles>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\sonarqube-webclient\SonarQube.Client\SonarQube.Client.csproj">
-      <Project>{5e513fc3-bda7-40f2-8b6a-1bb9372acb99}</Project>
-      <Name>SonarQube.Client</Name>
+    <ProjectReference Include="..\..\sonarqube-webclient\SonarQube.Client\SonarQube.Client.2015.csproj">
+      <Project>{BA771DF7-9F99-4DE3-B85B-3E5DB742A55C}</Project>
+      <Name>SonarQube.Client.2015</Name>
     </ProjectReference>
     <ProjectReference Include="..\Integration.Vsix\Integration.Vsix.csproj">
       <Project>{ff2ad819-28f4-493a-8e9b-1d3f16bd4689}</Project>
