--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -549,10 +549,29 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Target Name="CopyVsixToBinaries" AfterTargets="Build" Inputs="$(TargetDir)$(AssemblyName).vsix" Outputs="$(SolutionDir)binaries\$(AssemblyName).vsix">
+
+
+  <!-- ********************************************************** -->
+  <!-- Copy and sign the VSIX -->
+  <!-- ********************************************************** -->
+  <Import Project="$(MSBuildThisFileDirectory)SignVsixes.targets" />
+
+  <!-- Set properties required by the signing targets -->
+  <PropertyGroup>
+    <PackageFolder>..\..\packages\</PackageFolder>
+  </PropertyGroup>
+  <ItemGroup>
+    <VSIXesToSign Include="$(SolutionDir)binaries\$(AssemblyName).vsix" />
+  </ItemGroup>
+
+  <Target Name="CopyVsixToBinariesAndSign" AfterTargets="Build" Inputs="$(TargetDir)$(AssemblyName).vsix" Outputs="$(SolutionDir)binaries\$(AssemblyName).vsix">
     <Message Importance="high" Text="Copying vsix from $(TargetDir)$(AssemblyName).vsix to $(SolutionDir)binaries\$(AssemblyName).vsix" />
     <Copy OverwriteReadOnlyFiles="true" SourceFiles="$(TargetDir)$(AssemblyName).vsix" DestinationFiles="$(SolutionDir)binaries\$(AssemblyName).vsix" />
+
+    <CallTarget Targets="SignVsixesIfPfxSupplied" />
   </Target>
+  <!-- ********************************************************** -->
+
   <Import Project="..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets" Condition="Exists('..\..\packages\Grpc.Core.1.4.1\build\net45\Grpc.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
