--- a/src/Integration.Vsix/packages.config
+++ b/src/Integration.Vsix/packages.config
@@ -42,6 +42,7 @@
   <package id="Microsoft.VisualStudio.Threading" version="14.1.131" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Utilities" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Validation" version="14.1.111" targetFramework="net46" />
+  <package id="Microsoft.VSSDK.BuildTools" version="16.2.3073" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.VSSDK.Vsixsigntool" version="15.0.26201" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.7.1.4347" targetFramework="net46" developmentDependency="true" />
