Added third party license for CFamily subprocess.exe

--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -611,7 +611,7 @@
              IgnoreExitCode="false" />
 
     <!-- Copy the license file to the same directory -->
-    <Copy SourceFiles=".\CFamily\License" DestinationFolder="$(CFamilyTargetDirectory)" SkipUnchangedFiles="true" />
+    <Copy SourceFiles=".\CFamily\LICENSE.txt" DestinationFolder="$(CFamilyTargetDirectory)" SkipUnchangedFiles="true" />
 
     <ItemGroup>
       <Content Include="$(CFamilyTargetDirectory)\**\*">
